@@ -1,0 +1,59 @@
+________________________________________________________________________________
+Frame3DD version: 20091022               http://frame3dd.sf.net/
+GPL Copyright (C) 1992-2009, Henri P. Gavin 
+Frame3DD is distributed in the hope that it will be useful but with no warranty.
+For details see the GNU Public Licence: http://www.fsf.org/copyleft/gpl.html
+________________________________________________________________________________
+
+frame3dd-ex2   a 3D frame problem with torsion (kip  in  s) 
+Thu Oct 29 10:35:04 2009
+________________________________________________________________________________
+3 JOINTS;    2 MEMBERS;    1 LOAD CASES;  1 FIXED JOINTS;  
+For 2D problems, the Y-axis is vertical. 
+For 3D problems, the Z-axis is vertical. 
+________________________________________________________________________________
+J O I N T   D A T A                                         R E S T R A I N T S
+  Joint      X              Y              Z         radius  Fx Fy Fz Mx My Mz
+    1       0.000000       0.000000       0.000000    0.000   1  1  1  1  1  1
+    2      60.000000       0.000000       0.000000    0.000   0  0  0  0  0  0
+    3      60.000000       0.000000      40.000000    0.000   0  0  0  0  0  0
+F R A M E   E L E M E N T   D A T A					(local)
+  Beam   J1    J2     Ax   Asy   Asz    Jxx     Iyy     Izz       E       G roll
+    1     1     2   10.0   9.0   9.0   19.2     9.6     9.6  30000.0 12000.0   0
+    2     2     3   10.0   9.0   9.0   19.2     9.6     9.6  30000.0 12000.0   0
+  Neglect shear deformations.
+  Neglect geometric stiffness.
+
+L O A D   C A S E   1   O F   1  ... 
+
+   2 concentrated loads
+   0 uniformly distributed loads
+   0 trapezoidally distributed loads
+   0 concentrated point loads
+   0 temperature loads
+   0 prescribed displacements
+ J O I N T   L O A D S  +  E Q U I V A L E N T   J O I N T   L O A D S  (global)
+  Joint       Fx          Fy          Fz          Mxx         Myy         Mzz
+     2       0.000       0.000       0.800       0.000       0.000       0.000
+     3       0.000      -0.500       0.000       0.000       0.000       0.000
+
+E L A S T I C   S T I F F N E S S   A N A L Y S I S   via  L D L'  decomposition
+
+
+L O A D   C A S E   1   O F   1  ... 
+
+J O I N T   D I S P L A C E M E N T S					(global)
+  Joint    X-dsp       Y-dsp       Z-dsp       X-rot       Y-rot       Z-rot
+     2    0.0        -0.124870    0.199792    0.005203   -0.004995   -0.003122
+     3   -0.199792   -0.369985    0.199792    0.006590   -0.004995   -0.003122
+F R A M E   E L E M E N T   E N D   F O R C E S				(local)
+  Beam   Joint      Nx          Vy         Vz         Txx        Myy        Mzz
+     1      1      0.0         0.500     -0.800    -20.000     48.000     30.000
+     1      2      0.0        -0.500      0.800     20.000      0.0        0.0  
+     2      2      0.0         0.500      0.0        0.0        0.0       20.000
+     2      3      0.0        -0.500      0.0        0.0        0.0        0.0  
+R E A C T I O N S							(global)
+  Joint       Fx          Fy          Fz         Mxx         Myy         Mzz
+     1       0.0         0.500      -0.800     -20.000      48.000      30.000
+R M S   E Q U I L I B R I U M    E R R O R: 7.346e-14
+
